# trafikverket-slot-monitor

./: .env.example  .gitignore  README.md  enable_systemd.sh  export_session.sh  install_service.sh  login.py  pyproject.toml  quick_update.py  requirements.txt  start_monitor.sh  start_monitor_windows.bat  status_monitor.sh  stop_monitor.sh  test_parsing.py  trafikverket-monitor.service  trigger_workflow.sh  update_github_session.sh  update_session.py
.github/workflows/: login-and-update.yml  monitor.yml  run-all-monitors.yml  update-and-run.yml  update-session.yml  volvo-monitor.yml
src/: config.py  main.py  monitor.py  notifier.py  scraper.py  telegram_bot.py  volvo_monitor.py
src/utils/: api_client.py
tests/: test_monitor.py  test_notifier.py
